test_scores/negative_dimers/features/P06576.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P06576.pkl.xz